examples/test/testpolicy15901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15901
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key39: value30
      key0: value37
      key30: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value30
          key22: value49
      podSelector:
        matchLabels:
          key34: value15
          key49: value27
